--- a/stack/monitoring.yml
+++ b/stack/monitoring.yml
@@ -1,90 +1,72 @@
----
 services:
   prometheus:
-    image: prom/prometheus:latest
-    ports:
-      - target: 9090
-        published: 9090
-        protocol: tcp
-        mode: ingress
-    volumes:
-      - prometheus_data:/prometheus
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    image: prom/prometheus
+    configs:
+      - source: prometheus_config
+        target: /etc/prometheus/prometheus.yml
+      - source: alert_rules
+        target: /etc/prometheus/alert.rules.yml
     networks:
       - healthify_net
+    ports:
+      - "${PROMETHEUS_PORT}:9090"
     deploy:
       replicas: 1
       restart_policy:
         condition: on-failure
-    logging:
-      driver: json-file
 
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana
     environment:
-      GF_SECURITY_ADMIN_USER: admin
-      GF_SECURITY_ADMIN_PASSWORD: admin
-    ports:
-      - target: 3000
-        published: 3000
-        protocol: tcp
-        mode: ingress
+      GF_SECURITY_ADMIN_USER: ${GF_SECURITY_ADMIN_USER}
+      GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD}
+      GF_PATHS_PROVISIONING: /etc/grafana/provisioning
     volumes:
       - grafana_data:/var/lib/grafana
+      - /home/jenkins/monitoring-stack/dashboards/json:/etc/grafana/dashboards/json
+    configs:
+      - source: prometheus_datasource
+        target: /etc/grafana/provisioning/datasources/prometheus.yml
+      - source: grafana_dashboard_config
+        target: /etc/grafana/provisioning/dashboards/grafana.yml
     networks:
       - healthify_net
+    ports:
+      - "${GRAFANA_PORT}:3000"
     deploy:
       replicas: 1
       restart_policy:
         condition: on-failure
-    logging:
-      driver: json-file
 
   node-exporter:
-    image: prom/node-exporter:latest
+    image: prom/node-exporter
+    networks:
+      - healthify_net
     ports:
-      - target: 9100
-        published: 9100
-        protocol: tcp
-        mode: ingress
+      - "${NODE_EXPORTER_PORT}:9100"
     deploy:
       mode: global
       restart_policy:
         condition: on-failure
-    networks:
-      - healthify_net
-    logging:
-      driver: json-file
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
 
   postgres-exporter:
-    image: wrouesnel/postgres_exporter:latest
+    image: prometheuscommunity/postgres-exporter
     environment:
-      DATA_SOURCE_NAME: "postgresql://postgres:postgres@postgres:5432/healthify?sslmode=disable"
-    ports:
-      - target: 9187
-        published: 9187
-        protocol: tcp
-        mode: ingress
+      DATA_SOURCE_NAME: >
+        postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:5432/${POSTGRES_DB}?sslmode=disable
     networks:
       - healthify_net
+    ports:
+      - "${POSTGRES_EXPORTER_PORT}:9187"
+    depends_on:
+      - postgres
     deploy:
       replicas: 1
       restart_policy:
         condition: on-failure
-    logging:
-      driver: json-file
 
   cadvisor:
-    image: google/cadvisor:latest
-    ports:
-      - target: 8080
-        published: 8080
-        protocol: tcp
-        mode: ingress
+    image: gcr.io/cadvisor/cadvisor
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
@@ -92,16 +74,25 @@ services:
       - /var/lib/docker/:/var/lib/docker:ro
     networks:
       - healthify_net
+    ports:
+      - "${CADVISOR_PORT}:8080"
     deploy:
-      replicas: 1
+      mode: global
       restart_policy:
         condition: on-failure
-    logging:
-      driver: json-file
 
 volumes:
-  prometheus_data:
   grafana_data:
+
+configs:
+  prometheus_config:
+    file: /home/jenkins/monitoring-stack/prometheus.yml
+  alert_rules:
+    file: /home/jenkins/monitoring-stack/alert.rules.yml
+  prometheus_datasource:
+    file: /home/jenkins/monitoring-stack/prometheus-datasource.yml
+  grafana_dashboard_config:
+    file: /home/jenkins/monitoring-stack/grafana.yml
 
 networks:
   healthify_net:
