--- a/stack/docker-stack.yml
+++ b/stack/docker-stack.yml
@@ -47,7 +47,7 @@ services:
   frontend:
     image: ${REGISTRY}/healthify-frontend:latest
     environment:
-      API_BASE_URL: ${API_BASE_URL}
+      API_BASE_URL: http://192.168.50.4:5050
     networks:
       - healthify_net
     deploy:
