fixed port issue

--- a/stack/.env
+++ b/stack/.env
@@ -3,9 +3,11 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=healthify
 
+
 # Backend
 BACKEND_PORT=5050
-DB_HOST=postgres
+DB_HOST=healthify_postgres
+
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_NAME=healthify
