removed .env due to errors

--- a/stack/monitoring.yml
+++ b/stack/monitoring.yml
@@ -1,72 +1,89 @@
 services:
   prometheus:
-    image: prom/prometheus
-    configs:
-      - source: prometheus_config
-        target: /etc/prometheus/prometheus.yml
-      - source: alert_rules
-        target: /etc/prometheus/alert.rules.yml
+    image: prom/prometheus:latest
+    ports:
+      - target: 9090
+        published: 9090
+        protocol: tcp
+        mode: ingress
+    volumes:
+      - prometheus_data:/prometheus
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
     networks:
       - healthify_net
-    ports:
-      - "9090:9090"
     deploy:
       replicas: 1
       restart_policy:
         condition: on-failure
+    logging:
+      driver: json-file
 
   grafana:
-    image: grafana/grafana
+    image: grafana/grafana:latest
     environment:
-      GF_SECURITY_ADMIN_USER: ${GF_SECURITY_ADMIN_USER}
-      GF_SECURITY_ADMIN_PASSWORD: ${GF_SECURITY_ADMIN_PASSWORD}
-      GF_PATHS_PROVISIONING: /etc/grafana/provisioning
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+    ports:
+      - target: 3000
+        published: 3000
+        protocol: tcp
+        mode: ingress
     volumes:
       - grafana_data:/var/lib/grafana
-      - /home/jenkins/monitoring-stack/dashboards/json:/etc/grafana/dashboards/json
-    configs:
-      - source: prometheus_datasource
-        target: /etc/grafana/provisioning/datasources/prometheus.yml
-      - source: grafana_dashboard_config
-        target: /etc/grafana/provisioning/dashboards/grafana.yml
     networks:
       - healthify_net
-    ports:
-      - "3000:3000"
     deploy:
       replicas: 1
       restart_policy:
         condition: on-failure
+    logging:
+      driver: json-file
 
   node-exporter:
-    image: prom/node-exporter
-    networks:
-      - healthify_net
+    image: prom/node-exporter:latest
     ports:
-      - "9100:9100"
+      - target: 9100
+        published: 9100
+        protocol: tcp
+        mode: ingress
     deploy:
       mode: global
       restart_policy:
         condition: on-failure
-
-  postgres-exporter:
-    image: prometheuscommunity/postgres-exporter
-    environment:
-      DATA_SOURCE_NAME: >
-        postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DB_HOST}:5432/${POSTGRES_DB}?sslmode=disable
     networks:
       - healthify_net
+    logging:
+      driver: json-file
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+
+  postgres-exporter:
+    image: wrouesnel/postgres_exporter:latest
+    environment:
+      DATA_SOURCE_NAME: "postgresql://postgres:postgres@postgres:5432/healthify?sslmode=disable"
     ports:
-      - "9187:9187"
-    depends_on:
-      - postgres
+      - target: 9187
+        published: 9187
+        protocol: tcp
+        mode: ingress
+    networks:
+      - healthify_net
     deploy:
       replicas: 1
       restart_policy:
         condition: on-failure
+    logging:
+      driver: json-file
 
   cadvisor:
-    image: gcr.io/cadvisor/cadvisor
+    image: google/cadvisor:latest
+    ports:
+      - target: 8080
+        published: 8080
+        protocol: tcp
+        mode: ingress
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:ro
@@ -74,25 +91,16 @@ services:
       - /var/lib/docker/:/var/lib/docker:ro
     networks:
       - healthify_net
-    ports:
-      - "8080:8080"
     deploy:
-      mode: global
+      replicas: 1
       restart_policy:
         condition: on-failure
+    logging:
+      driver: json-file
 
 volumes:
+  prometheus_data:
   grafana_data:
-
-configs:
-  prometheus_config:
-    file: /home/jenkins/monitoring-stack/prometheus.yml
-  alert_rules:
-    file: /home/jenkins/monitoring-stack/alert.rules.yml
-  prometheus_datasource:
-    file: /home/jenkins/monitoring-stack/prometheus-datasource.yml
-  grafana_dashboard_config:
-    file: /home/jenkins/monitoring-stack/grafana.yml
 
 networks:
   healthify_net:
