--- a/stack/docker-stack.yml
+++ b/stack/docker-stack.yml
@@ -61,10 +61,13 @@ services:
       - target: 5173
         published: 5173
         protocol: tcp
-        mode: ingress
+        mode: ingress 
     logging:
       driver: json-file
+    command: >
+      sh -c "mkdir -p /usr/src/app/dist && echo \"export const API_BASE_URL = '${API_BASE_URL}/api';\" > /usr/src/app/src/config.js && serve -s dist -l 5173"
   
+
 volumes:
   pgdata:
     external: true
