--- a/deploy.yml
+++ b/deploy.yml
@@ -78,6 +78,14 @@
         group: jenkins
         mode: '0644'
         force: yes
+        
+    - name: Inject API URL into frontend config.js
+      copy:
+        dest: /home/jenkins/healthify-stack/config.js
+        content: "export const API_BASE_URL = 'http://192.168.50.4:5050/api';"
+        owner: jenkins
+        group: jenkins
+        mode: '0644'
 
     - name: Create external network healthify_net if not exists
       shell: docker network create --driver overlay healthify_net || true
@@ -90,14 +98,6 @@
       args:
         executable: /bin/bash
       ignore_errors: true
-
-    - name: Copy .env file to healthify-stack directory
-      copy:
-        src: ./stack/.env
-        dest: /home/jenkins/healthify-stack/.env
-        owner: jenkins
-        group: jenkins
-        mode: '0644'
 
     - name: Deploy Healthify stack
       shell: |
