--- a/stack/prometheus/prometheus.yml
+++ b/stack/prometheus/prometheus.yml
@@ -20,3 +20,7 @@ scrape_configs:
   - job_name: 'cadvisor'
     static_configs:
       - targets: ['cadvisor:8080']
+  - job_name: 'healthify-backend'
+    static_configs:
+      - targets: ['backend:5050']
+
