--- a/stack/docker-stack.yml
+++ b/stack/docker-stack.yml
@@ -17,6 +17,11 @@ services:
       placement:
         constraints:
           - node.role == manager
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     logging:
       driver: json-file
 
